Implementation of SIMD Non-Vectorised Aggregation Query